widget/InputData.h
@@ -314,6 +314,7 @@ class MouseInput : public InputData {
    * event or following "mouseup", set to true.
    */
   bool mPreventClickEvent;
+  bool mIgnoreCapturingContent;
 };
 
 /**
