widget/nsGUIEventIPC.h
@@ -219,6 +219,9 @@ struct ParamTraits<mozilla::WidgetMouseEvent> {
   using paramType = mozilla::WidgetMouseEvent;
 
   static void Write(MessageWriter* aWriter, const paramType& aParam) {
+    MOZ_ASSERT(!aParam.mIgnoreCapturingContent);
+    MOZ_ASSERT(!aParam.mSynthesizeMoveAfterDispatch);
+
     WriteParam(aWriter,
                static_cast<const mozilla::WidgetMouseEventBase&>(aParam));
     WriteParam(aWriter,
